thanks for rxjs sourse.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
     "start": "webpack-dev-server --mode development --open",
     "build_cjs": "npm-run-all clean_dist_cjs compile_dist_cjs",
     "clean_dist_cjs": "shx rm -rf ./dist/cjs",
-    "compile_dist_cjs": "tsc -p ./tsconfig/tsconfig.cjs.json --watch"
+    "compile_dist_cjs": "tsc -p ./tsconfig/tsconfig.cjs.json --watch",
+    "build_global": "npm-run-all clean_dist_global build_esm5_for_rollup && mkdirp ./dist/global && node ./tools/make-umd-bundle.js && npm-run-all build_closure_core clean_dist_esm5_for_rollup",
+    "clean_dist_global": "shx rm -rf ./dist/global",
+    "build_esm5_for_rollup": "npm-run-all clean_dist_esm5_for_rollup compile_dist_esm5_for_rollup",
+    "clean_dist_esm5_for_rollup": "shx rm -rf ./dist/esm5_for_rollup",
+    "compile_dist_esm5_for_rollup": "tsc -p ./tsconfig/tsconfig.esm5.rollup.json",
+    "build_closure_core": "node ./tools/make-closure-core.js"
   },
   "keywords": [],
   "author": "ReySun <reysun_sky@outlook.com>",
@@ -17,13 +23,19 @@
   "devDependencies": {
     "css-loader": "^0.28.10",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "google-closure-compiler-js": "20170218.0.0",
     "html-webpack-plugin": "^3.0.4",
     "less": "^3.0.1",
     "less-loader": "^4.0.6",
+    "lodash": "^4.17.5",
     "npm-run-all": "^4.1.2",
+    "rollup": "0.36.3",
+    "rollup-plugin-inject": "2.0.0",
+    "rollup-plugin-node-resolve": "^2.0.0",
     "shx": "^0.2.2",
     "style-loader": "^0.20.2",
     "ts-loader": "^4.0.0",
+    "tslib": "1.5.0",
     "typescript": "2.6.2",
     "webpack": "^4.0.1",
     "webpack-cli": "^2.0.10",
