--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
     "build": "webpack --mode production",
     "watch": "webpack --mode development --watch",
     "start": "webpack-dev-server --mode development --open",
+    "build_all": "npm-run-all build_cjs build_rollup build_global",
     "build_cjs": "npm-run-all clean_dist_cjs compile_dist_cjs",
     "clean_dist_cjs": "shx rm -rf ./dist/cjs",
-    "compile_dist_cjs": "tsc -p ./tsconfig/tsconfig.cjs.json --watch"
+    "compile_dist_cjs": "tsc -p ./tsconfig/tsconfig.cjs.json",
+    "build_rollup": "npm-run-all clean_dist_rollup compile_dist_rollup",
+    "clean_dist_rollup": "shx rm -rf ./dist/es2015",
+    "compile_dist_rollup": "tsc -p ./tsconfig/tsconfig.es2015.json",
+    "build_global": "rollup -c && node make-closure-core.js"
   },
   "keywords": [],
   "author": "ReySun <reysun_sky@outlook.com>",
@@ -17,10 +22,12 @@
   "devDependencies": {
     "css-loader": "^0.28.10",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "google-closure-compiler-js": "^20180204.0.0",
     "html-webpack-plugin": "^3.0.4",
     "less": "^3.0.1",
     "less-loader": "^4.0.6",
     "npm-run-all": "^4.1.2",
+    "rollup": "^0.56.5",
     "shx": "^0.2.2",
     "style-loader": "^0.20.2",
     "ts-loader": "^4.0.0",
