--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
-  "name": "js_console",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "console-in-dom",
+  "version": "1.0.1",
+  "description": "rewite browser's method of console.log, console.log in DOM",
+  "home": "https://reysun.github.io/console-in-dom/",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:ReySun/console-in-dom.git"
+  },
+  "main": "./console.js",
   "scripts": {
     "build": "webpack --mode production",
     "watch": "webpack --mode development --watch",
@@ -14,19 +19,26 @@
     "build_rollup": "npm-run-all clean_dist_rollup compile_dist_rollup",
     "clean_dist_rollup": "shx rm -rf ./dist/es2015",
     "compile_dist_rollup": "tsc -p ./tsconfig/tsconfig.es2015.json",
-    "build_global": "rollup -c && node make-closure-core.js"
+    "build_global": "rollup -c && node make-closure-core.js",
+    "build_package": "node npm-publish.js"
   },
-  "keywords": [],
+  "keywords": [
+    "console",
+    "browser",
+    "console-in-dom"
+  ],
   "author": "ReySun <reysun_sky@outlook.com>",
   "license": "MIT",
   "devDependencies": {
     "css-loader": "^0.28.10",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "fs-extra": "^5.0.0",
     "google-closure-compiler-js": "^20180204.0.0",
     "html-webpack-plugin": "^3.0.4",
     "less": "^3.0.1",
     "less-loader": "^4.0.6",
     "npm-run-all": "^4.1.2",
+    "optimize-css-assets-webpack-plugin": "^4.0.0",
     "rollup": "^0.56.5",
     "shx": "^0.2.2",
     "style-loader": "^0.20.2",
